背景とタイトル

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,9 @@
-HELLO WORLD
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>架空のぬい服屋さん</title>
+    </head>
+    <body style="background-color: #FAD7EC;";>
+
+    </body>
+</html>
